--- a/submission_2/Dockerfile
+++ b/submission_2/Dockerfile
@@ -11,7 +11,8 @@ COPY ./fast_api_requirements.txt fast_api_requirements.txt
 RUN pip install --no-cache-dir --upgrade -r fast_api_requirements.txt
 
 ENV HUGGINGFACE_TOKEN="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"
-ENV HUGGINGFACE_REPO="akjindal53244/peft_model_2"
+# ENV HUGGINGFACE_REPO="akjindal53244/peft_model_2"
+ENV HUGGINGFACE_REPO="upaya07/model_02"
 
 # Copy over single file server
 COPY ./main.py main.py
